# ucsbie

./: .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  vercel.json
api/: categories.py  technologies.py  ventures.py
data/: startups.json  tech_full.json  tech_summaries.json
docs/: ACCESSIBILITY.md  DISTRIBUTION.md  USING-WITH-AI.md  gem-instructions.md
mcp/: ucsbie_mcp.py
public/: index.html  openapi.yaml
public/data/: DATA-DICTIONARY.md  technologies.json  ucsb-ie.json  ucsb-technologies.csv  ucsb-ventures.csv  ventures.json
scripts/: build_marketplace.py  make_bundle.py  refresh.py
src/ucsbie/: __init__.py  cli.py
